# amiro_potential_field_navigation

./: .gitignore  .gitmodules  README.md  rsb.conf
potential_field_navigation/: CMakeLists.txt  package.xml
potential_field_navigation/config/: config.rviz  config1.rviz  config2.rviz  config3.rviz  config4.rviz  config_gazebo.rviz
potential_field_navigation/include/: image_selecter_gui.hpp  image_viewer_gui.hpp  potential_field_utils.hpp  potentialfield_image_converter.hpp  vectorfield_image_converter.hpp
potential_field_navigation/launch/: amiro_gazebo.launch  bridges.xml  camid_3_imageselectornodes_1_amiroids_1_generated.launch  camid_3_imageselectornodes_2_amiroids_1_generated.launch  camid_3_imageselectornodes_2_amiroids_2345_generated.launch  camid_3_imageselectornodes_2_amiroids_234_generated.launch  camid_3_imageselectornodes_2_amiroids_23_generated.launch  camid_3_imageselectornodes_2_amiroids_24_generated.launch  camid_3_imageselectornodes_2_amiroids_256_generated.launch  camid_3_imageselectornodes_2_amiroids_34567_generated.launch  camid_3_imageselectornodes_2_amiroids_3456_generated.launch  camid_3_imageselectornodes_2_amiroids_34_generated.launch  camid_3_imageselectornodes_2_amiroids_456_generated.launch  camid_4_imageselectornodes_1_amiroids_3_generated.launch  launchfile_generator.py  map_visualization.xml  master_sync.launch  start.launch  start1.launch  start2.launch  start3.launch  start4.launch  start_2amiros_2images.launch  start_34679.launch  start_34679_2images.launch  start_349.launch  start_amiro2.launch  start_charge_and_current.launch  start_gazebo.launch
potential_field_navigation/patter/: README.md
potential_field_navigation/patter/256x204/video/: test.avi
potential_field_navigation/src/: amiro_odom_to_potentialfield_node.cpp  image_selecter_node.cpp  image_to_potentialfield_node.cpp  image_to_vectorfield_node.cpp  image_viewer_node.cpp  odom_to_vectorfield_node.cpp  pixel_odom_to_pseudo_metric_odom_node.cpp  potentialfield_merger_node.cpp  potentialfield_to_amiro_kinematic_node.cpp  potentialfield_to_gridmap_node.cpp  vectorfield_merger_node.cpp  vectorfield_to_gridmap_node.cpp  vectorfield_to_kinematic_node.cpp
ros_to_rsb_bridge/: CMakeLists.txt  README.md  package.xml  useful_commands.txt
ros_to_rsb_bridge/src/: ros_geometry_msgs_Vector3_to_rst_math_Vec2DFloat.cpp  ros_geometry_msgs_posestamped_to_rst_geometry_pose.cpp  ros_geometry_msgs_twist_to_rst_value_array.cpp  ros_int_multiarray_rst_value_array.cpp
rsb_to_ros_bridge/: CMakeLists.txt  README.md  package.xml
rsb_to_ros_bridge/include/rsb_to_ros_bridge/: rsb_to_ros_time_converter.h
rsb_to_ros_bridge/include/rsb_to_ros_bridge/types/: enum.pb.cc  enum.pb.h  enum.proto  loc.pb.cc  loc.pb.h  loc.proto  pose.pb.cc  pose.pb.h  pose.proto  rotation.pb.cc  rotation.pb.h  rotation.proto  shapes.pb.cc  shapes.pb.h  shapes.proto  vertex.pb.cc  vertex.pb.h  vertex.proto
rsb_to_ros_bridge/src/: event_to_ros_clock.cpp  rsb_twb_to_ros_navmsgs_odometry.cpp  rst_pose_to_ros_navmsgs_odometry.cpp  rst_pose_to_ros_posestamped.cpp  rst_value_array_to_ros_int_array.cpp  rst_vision_image_to_ros_sensormsgs_image.cpp  rst_vision_laserscan_to_ros_sensormsgs_Laserscan.cpp
sai_msgs/: CMakeLists.txt  README.md  package.xml
sai_msgs/msg/: Int32MultiArrayStamped.msg
