<?xml version="1.0"?>
<package>
  <name>potential_field_navigation</name>
  <version>0.0.0</version>
  <description>The potential_field_navigation package</description>

  <maintainer email="tkorthals@cit-ec.uni-bielefeld.de">Timo Korthals</maintainer>
  <maintainer email="drudolph@techfak.uni-bielefeld.de">Daniel Rudolph</maintainer>


  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amiro_description</build_depend>
  <build_depend>amiro_gazebo</build_depend>
  <build_depend>amiro_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz_textured_quads</build_depend>
  <build_depend>sensor_mockup</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_ros</build_depend>

  <run_depend>amiro_description</run_depend>
  <run_depend>amiro_gazebo</run_depend>
  <run_depend>amiro_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz_textured_quads</run_depend>
  <run_depend>sensor_mockup</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_cv</run_depend>
  <run_depend>grid_map_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
